<resources>
    <!-- menu -->
    <string name="app_name">GS-Hometown-Android</string>
    <string name="menu_item_home">홈</string>
    <string name="menu_item_search">검색</string>
    <string name="menu_item_pay">결제·적립</string>
    <string name="menu_item_order">주문내역</string>
    <string name="menu_item_my_page">MY</string>
    <!-- home -->
    <string name="home_top_appbar_my_adress">우리집</string>
    <string name="home_reserve_title">GS25</string>
    <string name="home_reserve_sub_title">언제나 가까이</string>
    <string name="home_gsfresh_title">GS더프레시</string>
    <string name="home_gsfresh_sub_title">신선함이 가득</string>
    <string name="home_month_event_title">GS25 이달의 행사</string>
    <string name="home_month_event_sub_title">두근두근 기대되는 이달의 편의점 행사는?</string>
    <!--reserve-->
    <string name="reserve_top_banner">%1$d/%2$d</string>
    <string name="reserve_menu_review">(후기%1$d)</string>
    <string name="reserve_appbat_title">우리집</string>
    <string name="reserve_toolbar_title">우리동네 편의점 사전예약</string>
    <string name="reserve_tab_pick_up">매장수령</string>
    <string name="reserve_tab_delivery">택배상품</string>
    <string name="reserve_pick_up">수령매장</string>
    <string name="reserve_pick_up_location">GS25 당산진미점·6.5km</string>
    <string name="reserve_more">더보기</string>
    <string name="reserve_banner_label">사전\n예약</string>
    <string name="reserve_card_discount">카드할인가</string>
    <!-- 상세 구매 화면 -->
    <string name="purchase_detail_receive_avail">수령 가능</string>
    <string name="purchase_detail_receive_market">매장 수령</string>
    <string name="purchase_detail_tab_product_info">상품정보</string>
    <string name="purchase_detail_tab_how_to_use">이용안내</string>
    <string name="purchase_detail_tab_caution">유의사항</string>
    <string name="purchase_detail_baseket">장바구니 담기</string>
    <string name="purchase_detail_reserve">예약 주문</string>
    <string name="purchase_detail_receive_info">수령 정보</string>
    <string name="purchase_detail_review">후기보기</string>
    <string name="my_page_welcome">WELCOME</string>
    <string name="my_page_welcome_name">이솝트님</string>
    <string name="my_page_location">등급 안내</string>
    <string name="my_page_top">통합 회원으로 전환하고 추가 혜택받기</string>
    <string name="my_page_the_pop_rewards">더팝 리워즈</string>
    <string name="my_page_top_my_rewards">0점</string>
    <string name="my_page_top_point"><![CDATA[GS&POINT]]></string>
    <string name="my_page_top_my_point">0P</string>
    <string name="my_page_top_coupon">쿠폰함</string>
    <string name="my_page_top_my_coupon">3장</string>
    <string name="my_page_recent_product">최근본상품</string>
    <string name="my_page_heart">찜</string>
    <string name="my_page_my_review">나의후기</string>
    <string name="my_page_gift_box">선물함</string>
    <string name="my_page_order_title">주문 정보</string>
    <string name="my_page_order_basket">장바구니</string>
    <string name="my_page_order_breakdown">주문 내역</string>
    <string name="my_page_order_storage">나만의 냉장고 보관함</string>
    <string name="my_page_order_receipt">모바일 영수증</string>
    <string name="my_page_checkout_title">결제 정보</string>
    <string name="my_page_checkout_setting">결제·적립·할인 설정</string>
    <string name="my_page_checkout_receipt">현금영수증 번호 관리</string>
    <string name="my_page_checkout_gspay">GS Pay 관리</string>
    <string name="my_page_checkout_gsprime">GS Prime 카드 신청</string>
    <string name="my_page_checkout_mobilepop">모바일팝 가입하기</string>
    <string name="my_page_sale_title">할인 정보</string>
    <string name="my_page_sale_carrier">통신사 할인</string>
    <string name="my_page_my_title">나의 정보</string>
    <string name="my_page_my_information">개인 정보 관리</string>
    <string name="my_page_my_winery">나의 와이너리</string>
    <string name="my_page_my_event">이벤트 참여 내역</string>
    <string name="my_page_my_town">우리동네GS 클럽 정보</string>
    <string name="my_page_my_address">주소 관리</string>
    <string name="my_page_my_rewards">리워즈 전환</string>
    <string name="my_page_my_child_card">아동급식카드관리</string>
    <string name="my_page_notice_title">문의 및 공지</string>
    <string name="my_page_notice_chatbot">챗봇상담 문의</string>
    <string name="my_page_notice_question">자주 묻는 질문</string>
    <string name="my_page_notice">공지사항</string>
    <string name="my_page_notice_customer_center">고객센터</string>
    <string name="my_page_logout">로그아웃</string>
    <!--my page-->

</resources>
